--- a/client/views/index/index.html
+++ b/client/views/index/index.html
@@ -1,44 +1,46 @@
 <template name="index">
-      <div class="navbar navbar-default" role="navigation">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="http://www.boostable.com">GoHelp</a>
+  <header class="header">
+    <div class="navbar navbar-default" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="http://localhost:3000">Gente Boa</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Produtos</a></li>
+            <!--
+            <li><a href="#">About</a></li>
+            -->
+            <!-- <li><a href="#jobs">Jobs <span class="alerts">3</span></a></li> -->
+            <li class="highlight"><a href="#events">Entrar</a></li>
+            <!--
+            <li><a href="#">Sign Up</a></li>
+            -->
+            <!--
+            <li class="orange"><a href="#">Login</a></li>
+            -->
+          </ul>
+        </div><!--/.nav-collapse -->
       </div>
-      <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav navbar-right">
-          <!--
-          <li><a href="#">Product</a></li>
-          <li><a href="#">About</a></li>
-          -->
-          <!-- <li><a href="#jobs">Jobs <span class="alerts">3</span></a></li> -->
-          <li class="highlight"><a href="#marketplaces">Acesso Ongs</a></li>
-          <!--
-          <li><a href="#">Sign Up</a></li>
-          -->
-          <!--
-          <li class="orange"><a href="#">Login</a></li>
-          -->
-        </ul>
-      </div><!--/.nav-collapse -->
     </div>
-  </div>
-      <a name="top"></a>
-  <section class="welcome">
-    <div class="container">
-      <div class="row">
+    <a name="top"></a>
+    <div class="welcome">
+      <div class="row caption">
         <div class="col-sm-12">
-          <h1 class="text-center">Conectando pessoas</h1>
-          <a href="" class="btn btn-default text-center">Entrar com facebook</a>
+          <div class="container text-center">
+            <h1 class="text-center">Conectando pessoas para fazer o bem</h1>
+            <a href="" class="btn btn-default text-center">Entrar com facebook</a>
+          </div>
         </div>
       </div>
     </div>
-  </section>
+  </header>
   <section class="partners" style="display: none;">
     <div class="container">
       <div class="row">
@@ -49,7 +51,7 @@
             <li><a href="#"><i class="partners partners-opensky"><span>Open Sky</span></i></a></li>
             <li><a href="#"><i class="partners partners-storenvy"><span>Store Envy</span></i></a></li>
             <li><a href="#"><i class="partners partners-udemy"><span>Udemy</span></i></a></li>
-            <li><a href="#marketplaces">Add your marketplace</a></li>
+            <li><a href="#events">Add your events</a></li>
           </ul>
         </div>
       </div>
@@ -61,49 +63,80 @@
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
           <!-- <h2>How it works</h2> -->
-          <h2>How it works</h2>
-          <h3>Boost your visibility on marketplaces by advertising with Boostable.</h3><h3>
+          <h2>Como o clube do bem funciona?</h2>
+          <h3>Somos....</h3>
+          <h3>
         </h3></div>
       </div>
       <div class="row">
         <div class="col-sm-4 text-center">
           <i class="features features-instant"></i>
-          <h4>Instant setup with <br>your store url</h4>
-          <p>Simply sign up with your store URL on the marketplace. No setup required, we are already integrated with your marketplace.</p>
+          <h4>Voluntário</h4>
+          <p>bla bla</p>
         </div>
+
         <div class="col-sm-4 text-center">
-          <i class="features features-automated"></i>
-          <h4>Preview and <br>launch your ads</h4>
-          <p>Preview and launch your ads in minutes. We automatically build your ads and show them to the right customers at the right time.</p>
+          <i class="features features-instant"></i>
+          <h4>ONG</h4>
+          <p>bla bla</p>
         </div>
+
         <div class="col-sm-4 text-center">
-          <i class="features features-results"></i>
-          <h4>See the lift in your <br>business from ads</h4>
-          <p>We track the performance of your campaign and show you reports including the lift in your visit and sales from your ads.</p>
+          <i class="features features-instant"></i>
+          <h4>Empresas</h4>
+          <p>bla bla</p>
         </div>
       </div>
     </div>
   </section>
-  <a name="marketplaces"></a>
-  <section class="marketplace text-center">
+  <a name="events"></a>
+  <section class="events text-center">
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <img class="img-logo img-responsive" src="http://www.boostable.com/assets/images/marketplace.png">
-          <!-- <h2>For Marketplaces</h2> -->
-          <h3>Boostable for marketplaces</h3>
-          <p>Give tools for marketing and insights to your sellers with Boostable.</p>
-          <p>Grow your marketplace by helping your sellers advertise.</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-12">
-          <a href="mailto:sales@boostable.com" class="btn btn-default">Request Demo</a>
+          <!-- <h2>For events</h2> -->
+          <h2> Eventos </h2>
+          <!-- each pelos eventos -->
+          <div class="col-sm-3">
+            <i class="features features-instant"></i>
+            <h4>evento.nome</h4>
+            <p>evento.descricao</p>
+          </div>
+
+          <div class="col-sm-3">
+            <i class="features features-instant"></i>
+            <h4>evento.nome</h4>
+            <p>evento.descricao</p>
+          </div>
+
+          <div class="col-sm-3">
+            <i class="features features-instant"></i>
+            <h4>evento.nome</h4>
+            <p>evento.descricao</p>
+          </div>
+
+          <div class="col-sm-3">
+            <i class="features features-instant"></i>
+            <h4>evento.nome</h4>
+            <p>evento.descricao</p>
+          </div>
+
+          <div class="col-sm-3">
+            <i class="features features-instant"></i>
+            <h4>evento.nome</h4>
+            <p>evento.descricao</p>
+          </div>
+
+          <div class="col-sm-3">
+            <i class="features features-instant"></i>
+            <h4>evento.nome</h4>
+            <p>evento.descricao</p>
+          </div>
         </div>
       </div>
       <div class="row" style="display:none;">
         <div class="col-sm-12">
-          <h4>Our marketplace partners include</h4>
+          <h4>Our events partners include</h4>
           <ul class="list-inline text-center partners">
             <li><a href="#"><i class="partners partners-gray partners-etsy"><span>Etsy</span></i></a></li>
             <li><a href="#"><i class="partners partners-gray partners-opensky"><span>Open Sky</span></i></a></li>
@@ -114,7 +147,7 @@
       </div>
     </div>
   </section>
-  <a name="team"></a>
+  <!--a name="team"></a>
   <section class="team section-gray">
     <div class="container">
       <div class="row">
@@ -188,16 +221,23 @@
     <div class="container">
       <div class="row text-center">
         <div class="col-sm-10 col-sm-offset-1">
-          <!-- <h2>Contact Us</h2> -->
           <h3>Need more information?</h3>
           <h4>Contact us with any questions. We will get back to<br> you as soon as possible</h4>
           <a href="mailto:sales@boostable.com" class="btn btn-default">Contact Sales</a>
         </div>
       </div>
     </div>
-  </section>
+  </section-->
   <section class="footer">
-
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-sm-10 col-sm-offset-1">
+          <h3>Precisa de mais informações?</h3>
+          <h4>Entre em contato conosco <br> responderemos o mais rápido possível</h4>
+          <a href="mailto:" class="btn btn-default">Contato</a>
+        </div>
+      </div>
+    </div>
   </section>
 </template>
 
