--- a/client/views/index/index.html
+++ b/client/views/index/index.html
@@ -17,7 +17,7 @@
           <li><a href="#">About</a></li>
           -->
           <!-- <li><a href="#jobs">Jobs <span class="alerts">3</span></a></li> -->
-          <li class="highlight"><a href="#marketplaces">Acesso Ongs</a></li>
+          <li class="highlight"><a href="/accessong">{{> loginButtons}}</a></li>
           <!--
           <li><a href="#">Sign Up</a></li>
           -->
@@ -34,7 +34,7 @@
       <div class="row">
         <div class="col-sm-12">
           <h1 class="text-center">Conectando pessoas</h1>
-          <a href="" class="btn btn-default text-center">Entrar com facebook</a>
+          <a href="" class="btn btn-default text-center"> {{> loginButtons}} Entrar com facebook</a>
         </div>
       </div>
     </div>
