--- a/client/views/common/header.html
+++ b/client/views/common/header.html
@@ -1,4 +1,35 @@
 <template name="header">
-  <p>Template header</p>
+  <header>
+    <div class="navbar navbar-default" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="http://localhost:3000">Gente Boa</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#"></a></li>
+            <li><a href="#">Eventos</a></li>
+            <!--
+            <li><a href="#">About</a></li>
+            -->
+            <!-- <li><a href="#jobs">Jobs <span class="alerts">3</span></a></li> -->
+            <li class="highlight"><a href="#events">Entrar como ONG</a></li>
+            <!--
+            <li><a href="#">Sign Up</a></li>
+            -->
+            <!--
+            <li class="orange"><a href="#">Login</a></li>
+            -->
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+  </header>
 </template>
 
