--- a/client/views/profile/profile.html
+++ b/client/views/profile/profile.html
@@ -1,4 +1,176 @@
 <template name="profile">
-  <p>Template profile</p>
+  <section class="partners" style="display: none;">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <ul class="list-inline text-center partners">
+            <li>Our partners include</li>
+            <li><a href="#"><i class="partners partners-etsy"><span>Etsy</span></i></a></li>
+            <li><a href="#"><i class="partners partners-opensky"><span>Open Sky</span></i></a></li>
+            <li><a href="#"><i class="partners partners-storenvy"><span>Store Envy</span></i></a></li>
+            <li><a href="#"><i class="partners partners-udemy"><span>Udemy</span></i></a></li>
+            <li><a href="#events">Add your events</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+  <a name="how"></a>
+  <section class="how section-white">
+  	<div class="col-sm-4 profile-menu">
+		</div>
+		<div class="col-sm-8 timeline">
+		</div>
+  </section>
+  <a name="events"></a>
+  <section class="events text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <!-- <h2>For events</h2> -->
+          <h2> Eventos </h2>
+          <!-- each pelos eventos -->
+          <div class="col-sm-3">
+            <i class="features features-instant"></i>
+            <h4>evento.nome</h4>
+            <p>evento.descricao</p>
+          </div>
+
+          <div class="col-sm-3">
+            <i class="features features-instant"></i>
+            <h4>evento.nome</h4>
+            <p>evento.descricao</p>
+          </div>
+
+          <div class="col-sm-3">
+            <i class="features features-instant"></i>
+            <h4>evento.nome</h4>
+            <p>evento.descricao</p>
+          </div>
+
+          <div class="col-sm-3">
+            <i class="features features-instant"></i>
+            <h4>evento.nome</h4>
+            <p>evento.descricao</p>
+          </div>
+
+          <div class="col-sm-3">
+            <i class="features features-instant"></i>
+            <h4>evento.nome</h4>
+            <p>evento.descricao</p>
+          </div>
+
+          <div class="col-sm-3">
+            <i class="features features-instant"></i>
+            <h4>evento.nome</h4>
+            <p>evento.descricao</p>
+          </div>
+        </div>
+      </div>
+      <div class="row" style="display:none;">
+        <div class="col-sm-12">
+          <h4>Our events partners include</h4>
+          <ul class="list-inline text-center partners">
+            <li><a href="#"><i class="partners partners-gray partners-etsy"><span>Etsy</span></i></a></li>
+            <li><a href="#"><i class="partners partners-gray partners-opensky"><span>Open Sky</span></i></a></li>
+            <li><a href="#"><i class="partners partners-gray partners-storenvy"><span>Store Envy</span></i></a></li>
+            <li><a href="#"><i class="partners partners-gray partners-udemy"><span>Udemy</span></i></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--a name="team"></a>
+  <section class="team section-gray">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-10 col-sm-offset-1">
+          <h3>Nossa equipe</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-10 col-sm-offset-1 col-xs-offset-1 col-xs-10">
+          <h4>Leadership</h4>
+        </div>
+        <div class="col-sm-5 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+          <div class="profile">
+            <div class="row">
+              <div class="col-sm-4">
+                <img class="img-profile img-responsive" src="">
+                <ul class="list-inline text-center">
+                  <li><a target="_blank" href="https://twitter.com/selcukatli"><i class="icon-twitter"><span>Twitter</span></i></a></li>
+                  <li><a target="_blank" href="http://www.linkedin.com/in/selcukatli"><i class="icon-linkedin"><span>Linked In</span></i></a></li>
+                </ul>
+              </div>
+              <div class="col-sm-8">
+                <h5>Selcuk Atli</h5>
+                <h6>Co-Founder and CEO</h6>
+                <p>Selcuk is a Fulbright scholar, endeavor entrepreneur and singer song writer. He previously founded Socialwire, an award winning Facebook partner that helps top online retailers automate their product ads.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-5 col-xs-10 col-xs-offset-1">
+          <div class="profile">
+            <div class="row">
+              <div class="col-sm-4">
+                <img class="img-profile img-responsive" src="">
+                <ul class="list-inline text-center">
+                  <li><a target="_blank" href="https://twitter.com/changcommaalex"><i class="icon-twitter"><span>Twitter</span></i></a></li>
+                  <li><a target="_blank" href="http://www.linkedin.com/in/changcommaalex"><i class="icon-linkedin"><span>Linked In</span></i></a></li>
+                </ul>
+              </div>
+              <div class="col-sm-8">
+                <h5>Alex Chang</h5>
+                <h6>Co-Founder and CTO</h6>
+                <p>Alex served as Co-Founder and Chief Product Officer of Social Amp which helped retailers like Levi’s and 1-800 Flowers personalize their shopping experiences with Facebook. Social Amp was acquired early 2012.
+              </p></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-10 col-sm-offset-1 col-xs-offset-1 col-xs-10">
+          <h4>Our Investors</h4>
+          <div class="row investors">
+            <div class="col-md-3 col-sm-4 col-xs-6">
+              <a href="http://svangel.com/" target="_blank"><i class="investor investor-svangel"><span>SVAngel</span></i></a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6">
+              <a href="http://ycombinator.com/" target="_blank"><i class="investor investor-yc"><span>YCombinator</span></i></a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6">
+              <a href="http://500.co/" target="_blank"><i class="investor investor-500"><span>500 Startups</span></i></a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xs-6">
+              <a href="https://angel.co/boostable" target="_blank"><i class="investor investor-more"><span>See More</span></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="contact section-white">
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-sm-10 col-sm-offset-1">
+          <h3>Need more information?</h3>
+          <h4>Contact us with any questions. We will get back to<br> you as soon as possible</h4>
+          <a href="mailto:sales@boostable.com" class="btn btn-default">Contact Sales</a>
+        </div>
+      </div>
+    </div>
+  </section-->
+  <section class="footer">
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-sm-10 col-sm-offset-1">
+          <h3>Precisa de mais informações?</h3>
+          <h4>Entre em contato conosco <br> responderemos o mais rápido possível</h4>
+          <a href="mailto:" class="btn btn-default">Contato</a>
+        </div>
+      </div>
+    </div>
+  </section>
 </template>
 
