Add routes & fix filters

--- a/client/views/index/index.html
+++ b/client/views/index/index.html
@@ -35,7 +35,7 @@
           <li><a href="#">About</a></li>
           -->
           <!-- <li><a href="#jobs">Jobs <span class="alerts">3</span></a></li> -->
-          <li class="highlight"><a href="/accessong">{{> loginButtons}}</a></li>
+          <li class="highlight"><a href="/accessong">Acesso Ongs</a></li>
           <!--
           <li><a href="#">Sign Up</a></li>
           -->
