--- a/client/css/css2.css
+++ b/client/css/css2.css
@@ -1,5 +1,6 @@
 body, html {
   padding:0px;
+  margin:0px !important;
   width: 100%;
   height: 100%;
 }
@@ -46,8 +47,10 @@ h1, h2, h3{
   font-size: 14px;
   font-weight: 900;
   margin-bottom: 0px;
-  margin-top: -10px;
+  width:100%;
   text-transform: uppercase;
+  position:absolute;
+  box-shadow:0px 3px 5px rgba(0,0,0, 0.5);
 }
 
   a.navbar-brand{
@@ -866,7 +869,28 @@ section.footer{
   }
 }
 
+section.profile{
+  height:100%;
+}
+
 .profile-menu{
   height:100%;
-  background-color:#08FCBE;
+  border-right: 5px solid #08FCBE;
+}
+
+.profile-picture{
+  margin-top: 100px;
+}
+
+.profile-description{
+  margin-top: 2em;
+  background-color: rgba(255,255,255,0.8);
+}
+
+.profile-description > h1{
+  font-size:2em;
+}
+
+h3.profile{
+  margin:0px !important;
 }
