--- a/client/views/layouts/layout.html
+++ b/client/views/layouts/layout.html
@@ -1,5 +1,7 @@
 <template name="layout">
-  {{>header}}
-  {{>yield}}
+  <body>
+    {{> yield region='header'}}
+      {{>yield}}
+  </body>
 </template>
 
