--- a/client/views/index/index.html
+++ b/client/views/index/index.html
@@ -3,9 +3,9 @@
     <a name="top"></a>
     <div class="welcome">
       <div class="row caption">
-        <div class="col-sm-12">
+        <div class="col-sm-12 text-center">
           <h1 class="text-center">Conectando pessoas</h1>
-          <a href="" class="btn btn-default text-center"> {{> loginButtons}} Entrar com facebook</a>
+          {{> loginButtons}}
         </div>
       </div>
     </div>
