--- a/client/views/accessOng/accessOng.html
+++ b/client/views/accessOng/accessOng.html
@@ -1,4 +1,18 @@
 <template name="accessOng">
-  <p>Template accessOng{{> loginButtons}}</p>
+  <br>
+  <br>
+  <br>
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <h1>Acessar Ong Admin</h1>
+          <a href="" class="btn btn-default text-center">{{>loginButtons}}</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
 </template>
 
