--- a/client/views/common/header.html
+++ b/client/views/common/header.html
@@ -2,6 +2,7 @@
   <header>
     <div class="navbar navbar-default" role="navigation">
       <div class="container">
+        {{#if currentUser}}
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
@@ -9,21 +10,31 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://localhost:3000">Gente Boa</a>
+          <a class="navbar-brand" href="{{pathFor 'main'}}">Gente Boa</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-
-            {{#if currentUser}}
-              <li><a href="#">ONGs</a></li>
-              <li><a href="#">Recompensa</a></li>
-              <li>{{> loginButtons}}</li>
-            {{else}}
-              <li class="highlight"><a href="{{pathFor 'accessOng'}}">Entrar como ONG</a></li>
-            {{/if}}
-
+            <li><a href="{{pathFor 'listOngs'}}">ONGs</a></li>
+            <li><a href="{{pathFor 'recompensas'}}">Recompensa</a></li>
+            <li>{{> loginButtons}}</li>
           </ul>
         </div><!--/.nav-collapse -->
+        {{else}}
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="{{pathFor 'index'}}">Gente Boa</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li class="highlight"><a href="{{pathFor 'accessOng'}}">Entrar como ONG</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+        {{/if}}
       </div>
     </div>
   </header>
