Cria um mockup da timeline no profile do usuário

--- a/client/css/css1.css
+++ b/client/css/css1.css
@@ -4583,7 +4583,7 @@ textarea.input-group-sm>.form-control,textarea.input-group-sm>.input-group-addon
 }
 
 .navbar-default {
-    background-color: #08FCBE;
+    background-color: #3EFABC;
     border-color: #222
 }
 
