--- a/client/views/accessOng/accessOng.html
+++ b/client/views/accessOng/accessOng.html
@@ -3,11 +3,42 @@
   <br>
   <br>
   <section>
-    <div class="container">
+    <div id="acesso" class="container">
       <div class="row">
         <div class="col-sm-12">
           <h1>Acessar Ong Admin</h1>
-          <a href="" class="btn btn-default text-center">{{>loginButtons}}</a>
+          <form class="form-inline intro" id="formSignIn">
+            <div class="form-group">
+              <input type="email" class="input2 form-control" name="email" id="email" autocomplete="off" placeholder="E-mail">
+            </div>
+            <div class="form-group">
+              <input type="password" class="input2 form-control" name="password" id="password" autocomplete="off" placeholder="Senha">
+            </div>
+            <div class="form-group">
+              <button type="submit" class="btn">Acessar</button>
+            </div>
+          </form>
+          <a href="" class="goCadastro">Cadastrar uma ONG</a>
+        </div>
+      </div>
+    </div>
+
+    <div id="cadastro" class="container hidden">
+      <div class="row">
+        <div class="col-sm-12">
+          <h1>Cadastrar ONG</h1>
+          <form class="form-inline intro" id="formSignUp">
+            <div class="form-group">
+              <input type="emailSignUp" class="input2 form-control" name="email" id="email" autocomplete="off" placeholder="E-mail">
+            </div>
+            <div class="form-group">
+              <input type="passwordSignUp" class="input2 form-control" name="password" id="password" autocomplete="off" placeholder="Senha">
+            </div>
+            <div class="form-group">
+              <button type="submit" class="btn">Cadastrar</button>
+            </div>
+          </form>
+          <a href="" class="goAcesso">Cancelar cadastro</a>
         </div>
       </div>
     </div>
