--- a/client/views/index/index.html
+++ b/client/views/index/index.html
@@ -5,7 +5,7 @@
       <div class="row caption">
         <div class="col-sm-12">
           <h1 class="text-center">Conectando pessoas</h1>
-          <a href="" class="btn btn-default text-center"> {{> loginButtons}}</a>
+          <p href="" class="btn btn-default text-center"> {{> loginButtons}}</p>
         </div>
       </div>
     </div>
