--- a/client/views/index/index.html
+++ b/client/views/index/index.html
@@ -48,54 +48,25 @@
       <div class="row">
         <div class="col-sm-12">
           <!-- <h2>For events</h2> -->
-          <h2> Eventos </h2>
+          <h2> Eventos passados</h2>
           <!-- each pelos eventos -->
-          <div class="col-sm-3">
+          <div class="col-sm-4">
             <i class="features features-instant"></i>
             <h4>evento.nome</h4>
             <p>evento.descricao</p>
           </div>
 
-          <div class="col-sm-3">
+          <div class="col-sm-4">
             <i class="features features-instant"></i>
             <h4>evento.nome</h4>
             <p>evento.descricao</p>
           </div>
 
-          <div class="col-sm-3">
+          <div class="col-sm-4">
             <i class="features features-instant"></i>
             <h4>evento.nome</h4>
             <p>evento.descricao</p>
           </div>
-
-          <div class="col-sm-3">
-            <i class="features features-instant"></i>
-            <h4>evento.nome</h4>
-            <p>evento.descricao</p>
-          </div>
-
-          <div class="col-sm-3">
-            <i class="features features-instant"></i>
-            <h4>evento.nome</h4>
-            <p>evento.descricao</p>
-          </div>
-
-          <div class="col-sm-3">
-            <i class="features features-instant"></i>
-            <h4>evento.nome</h4>
-            <p>evento.descricao</p>
-          </div>
-        </div>
-      </div>
-      <div class="row" style="display:none;">
-        <div class="col-sm-12">
-          <h4>Our events partners include</h4>
-          <ul class="list-inline text-center partners">
-            <li><a href="#"><i class="partners partners-gray partners-etsy"><span>Etsy</span></i></a></li>
-            <li><a href="#"><i class="partners partners-gray partners-opensky"><span>Open Sky</span></i></a></li>
-            <li><a href="#"><i class="partners partners-gray partners-storenvy"><span>Store Envy</span></i></a></li>
-            <li><a href="#"><i class="partners partners-gray partners-udemy"><span>Udemy</span></i></a></li>
-          </ul>
         </div>
       </div>
     </div>
