--- a/client/views/recompensas/recompensas.html
+++ b/client/views/recompensas/recompensas.html
@@ -1,4 +1,34 @@
 <template name="recompensas">
-  <p>Template recompensas</p>
+	<div class="container margin-nav">
+	  <div class="jumbotron">
+		  <h1>Recompensas para quem merece</h1>
+		  <p>Retire aqui seu voucher de desconto para produtos das empresas do bem</p>
+		</div>
+		<div class="row">
+			<div class="col-sm-3">
+				<h3>Empresa 1</h3>
+				<p>Descrição dos descontos e da empresa</p>
+				<p><button class="btn btn-primary">Retirar	</button></p>
+			</div>
+
+			<div class="col-sm-3">
+				<h3>Empresa 1</h3>
+				<p>Descrição dos descontos e da empresa</p>
+				<p><button class="btn btn-primary">Retirar	</button></p>
+			</div>
+
+			<div class="col-sm-3">
+				<h3>Empresa 1</h3>
+				<p>Descrição dos descontos e da empresa</p>
+				<p><button class="btn btn-primary">Retirar	</button></p>
+			</div>
+
+			<div class="col-sm-3">
+				<h3>Empresa 1</h3>
+				<p>Descrição dos descontos e da empresa</p>
+				<p><button class="btn btn-primary">Retirar	</button></p>
+			</div>
+		</div>
+	</div>
 </template>
 
