--- a/client/views/main/main.html
+++ b/client/views/main/main.html
@@ -1,20 +1,4 @@
 <template name="main">
-  <section class="partners" style="display: none;">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-          <ul class="list-inline text-center partners">
-            <li>Our partners include</li>
-            <li><a href="#"><i class="partners partners-etsy"><span>Etsy</span></i></a></li>
-            <li><a href="#"><i class="partners partners-opensky"><span>Open Sky</span></i></a></li>
-            <li><a href="#"><i class="partners partners-storenvy"><span>Store Envy</span></i></a></li>
-            <li><a href="#"><i class="partners partners-udemy"><span>Udemy</span></i></a></li>
-            <li><a href="#events">Add your events</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
   <section class="profile">
   	<div class="col-sm-2 profile-menu">
   		<div class="row">
@@ -26,7 +10,7 @@
   			</div>
   			<div class="col-sm-12 text-center">
   				<hr>
-  				<h4 class="profile">ONGs que eu curto</h4>
+  				<h4 class="profile">Minhas ONGs</h4>
   				<br>
   				<div class="row ong">
   					<span class="col-sm-2 foto">
@@ -89,11 +73,16 @@
 							<div class="col-sm-11 col-sm-offset-1">
 								<h3>Almoço beneficiente de dias da criança no orfanato</h3>
 							</div>
-							<div class="col-sm-10 col-sm-offset-1  text-center">
+							<div class="col-sm-10 col-sm-offset-1">
+								<p>
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lacinia ipsum ut arcu sollicitudin, ultrices mattis risus ultricies. Nunc accumsan, augue id tempor tincidunt, nisl metus accumsan felis, ac pulvinar lectus augue a nisl. Integer laoreet sollicitudin vehicula. Integer venenatis est eu dictum imperdiet. Phasellus vitae ornare neque, vel auctor est. Fusce ante arcu, pretium pulvinar ante a, dignissim sollicitudin justo. Curabitur scelerisque feugiat hendrerit. Etiam tempor consequat sapien, ut semper lacus sagittis vel. Mauris mattis augue vel massa auctor ultricies. Sed pellentesque nisi eu nisi commodo pellentesque. Ut in ornare tortor.
 
 								Donec sodales nulla at lacinia pharetra. Curabitur dictum aliquam enim non posuere. Donec lectus ipsum, tristique lacinia ornare eget, tempor sit amet elit. Ut accumsan orci et dolor commodo commodo. Pellentesque aliquet nec enim ac iaculis. Aenean ullamcorper facilisis volutpat. Nam iaculis elit dui, in aliquam erat eleifend vitae. Mauris at ullamcorper tortor. Nam rhoncus, sem sed dapibus faucibus, sem ante sollicitudin risus, eu iaculis dolor mauris convallis elit. Nullam vitae eleifend nisi. 
+								</p>
 							</div>
+							<p class='text-center'>
+								<button class="btn btn-primary">Ajudar!</button>
+							</p>
 						</div>
 					</div>
 				</div>
