--- a/client/views/main/main.html
+++ b/client/views/main/main.html
@@ -15,14 +15,16 @@
       </div>
     </div>
   </section>
+
   <section class="profile">
+    {{#each user}}
   	<div class="col-sm-2 profile-menu">
   		<div class="row">
   			<div class="col-sm-12 profile-picture">
-  				<img src="images/profile-photo.jpg" alt="{{nome}}" class="img-circle img-responsive">
+  				<img src="{{picFacebook profile.id}}" alt="{{nome}}" class="img-circle img-responsive">
   			</div>
   			<div class="col-sm-12 text-center profile-description">
-  				<h1>Fulano de tal</h1>
+  				<h1>{{profile.name}}</h1>
   			</div>
   			<div class="col-sm-12 text-center">
   				<hr>
@@ -38,21 +40,23 @@
   				</div>
   			</div>
   		</div>
-	</div>
+	   </div>
+    {{/each}}
 	<div class="col-sm-9 timeline">
 		<div class="container">
 			<div class="row list-group list-unstyled events-list">
+      {{#each events}}
 				<div class="col-sm-12 list-group-item timeline-event">
 					<h4 class="list-group-item-heading">
 						<div class="row">
 		  					<span class="col-sm-1 foto">
-		  						<img src="images/ong.png" alt="{{nome}}" class="img-circle img-responsive">
+		  						<img src="images/{{linkong}}.png" alt="{{nome}}" class="img-circle img-responsive">
 		  					</span>
 		  					<span class="col-sm-11 text-left nome">
-		  						ONG só amor
+		  						{{ong}}
 		  						<br>
 		  						<small>
-		  							Adicionou um novo evento a 4 horas
+		  							Adicionou {{type}} {{data}}
 		  						</small>
 		  					</span>
 		  				</div>
@@ -60,43 +64,15 @@
 					<div class="list-group-item-text">
 						<div class="row">
 							<div class="col-sm-11 col-sm-offset-1">
-								<h3>Almoço beneficiente de dias da criança no orfanato</h3>
-							</div>
-							<div class="col-sm-12 text-center">
-								<a href="#">Mais detalhes...</a>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-sm-12 list-group-item timeline-event">
-					<h4 class="list-group-item-heading">
-						<div class="row">
-		  					<span class="col-sm-1 foto">
-		  						<img src="images/ong.png" alt="{{nome}}" class="img-circle img-responsive">
-		  					</span>
-		  					<span class="col-sm-11 text-left nome">
-		  						ONG só amor
-		  						<br>
-		  						<small>
-		  							Adicionou um novo evento a 4 horas
-		  						</small>
-		  					</span>
-		  				</div>
-					</h4>
-					<div class="list-group-item-text">
-						<div class="row">
-							<div class="col-sm-11 col-sm-offset-1">
-								<h3>Almoço beneficiente de dias da criança no orfanato</h3>
+								<h3>{{title}}</h3>
 							</div>
 							<div class="col-sm-10 col-sm-offset-1  text-center">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lacinia ipsum ut arcu sollicitudin, ultrices mattis risus ultricies. Nunc accumsan, augue id tempor tincidunt, nisl metus accumsan felis, ac pulvinar lectus augue a nisl. Integer laoreet sollicitudin vehicula. Integer venenatis est eu dictum imperdiet. Phasellus vitae ornare neque, vel auctor est. Fusce ante arcu, pretium pulvinar ante a, dignissim sollicitudin justo. Curabitur scelerisque feugiat hendrerit. Etiam tempor consequat sapien, ut semper lacus sagittis vel. Mauris mattis augue vel massa auctor ultricies. Sed pellentesque nisi eu nisi commodo pellentesque. Ut in ornare tortor.
-
-								Donec sodales nulla at lacinia pharetra. Curabitur dictum aliquam enim non posuere. Donec lectus ipsum, tristique lacinia ornare eget, tempor sit amet elit. Ut accumsan orci et dolor commodo commodo. Pellentesque aliquet nec enim ac iaculis. Aenean ullamcorper facilisis volutpat. Nam iaculis elit dui, in aliquam erat eleifend vitae. Mauris at ullamcorper tortor. Nam rhoncus, sem sed dapibus faucibus, sem ante sollicitudin risus, eu iaculis dolor mauris convallis elit. Nullam vitae eleifend nisi. 
+								{{description}}
 							</div>
 						</div>
 					</div>
 				</div>
+      {{/each}}
 			</div>
 		</div>
 	</div>
