--- a/client/views/index/index.html
+++ b/client/views/index/index.html
@@ -4,7 +4,7 @@
     <div class="welcome">
       <div class="row caption">
         <div class="col-sm-12 text-center">
-          <h1 class="text-center">Conectando pessoas</h1>
+          <h1 class="text-center">Quem faz a diferença merece recompensa</h1>
           {{> loginButtons}}
         </div>
       </div>
