--- a/client/views/listOngs/listOngs.html
+++ b/client/views/listOngs/listOngs.html
@@ -1,4 +1,34 @@
 <template name="listOngs">
-  <p>Template listOngs</p>
+<div class="container">
+	<div class="row ong-list margin-nav">
+		<div class="col-lg-12 jumbotron">
+			<h1>Conheça novas iniciativas</h1>
+			<h2><small>Explore novas formas de mudar o mundo</small></h2>
+		</div>
+		<div class="col-sm-4 ong">
+			<img src="/images/greenpeace.jpg" alt="{{nome}}" class="img-circle img-responsive">
+			<h2>Greenpeace</h2>
+			<p>
+				O Greenpeace é uma organização global cuja missão é proteger o meio ambiente, promover a paz e inspirar mudanças de atitudes que garantam um futuro mais verde e limpo para esta e para as futuras gerações.
+			</p>
+		</div>
+
+		<div class="col-sm-4 ong">
+			<img src="/images/greenpeace.jpg" alt="{{nome}}" class="img-circle img-responsive">
+			<h2>Greenpeace</h2>
+			<p>
+				O Greenpeace é uma organização global cuja missão é proteger o meio ambiente, promover a paz e inspirar mudanças de atitudes que garantam um futuro mais verde e limpo para esta e para as futuras gerações.
+			</p>
+		</div>
+
+		<div class="col-sm-4 ong">
+			<img src="/images/greenpeace.jpg" alt="{{nome}}" class="img-circle img-responsive">
+			<h2>Greenpeace</h2>
+			<p>
+				O Greenpeace é uma organização global cuja missão é proteger o meio ambiente, promover a paz e inspirar mudanças de atitudes que garantam um futuro mais verde e limpo para esta e para as futuras gerações.
+			</p>
+		</div>
+	</div>
+</div>
 </template>
 
