--- a/client/views/main/main.html
+++ b/client/views/main/main.html
@@ -57,7 +57,7 @@
 		  						{{ong}}
 		  						<br>
 		  						<small>
-		  							Adicionou {{type}} {{data}}
+		  							Adicionou {{type}} {{fromNow createDate}}
 		  						</small>
 		  					</span>
 		  				</div>
