--- a/client/views/recompensas/recompensas.html
+++ b/client/views/recompensas/recompensas.html
@@ -5,29 +5,27 @@
 		  <p>Retire aqui seu voucher de desconto para produtos das empresas do bem</p>
 		</div>
 		<div class="row">
-			<div class="col-sm-3">
-				<h3>Empresa 1</h3>
-				<p>Descrição dos descontos e da empresa</p>
+			<div class="col-sm-4">
+				<h3>Magazine Luiza</h3>
+				<img src="/images/magazineluiza.jpg" style="width:200px" alt="">
+				<p>As melhores ofertas em móveis, eletrônicos, eletrodomésticos, informática e muito mais, você encontra no site do Magazine Luiza! <br> <b>Desconto de ..%</b></p>
 				<p><button class="btn btn-primary">Retirar	</button></p>
 			</div>
 
-			<div class="col-sm-3">
-				<h3>Empresa 1</h3>
-				<p>Descrição dos descontos e da empresa</p>
+			<div class="col-sm-4">
+				<h3>Abril</h3>
+				<img src="/images/abril.jpg" style="width:200px" alt="">
+				<p>Assine as Revistas da Editora Abril com <br><b>desconto de ..%</b></p>
 				<p><button class="btn btn-primary">Retirar	</button></p>
 			</div>
 
-			<div class="col-sm-3">
-				<h3>Empresa 1</h3>
-				<p>Descrição dos descontos e da empresa</p>
+			<div class="col-sm-4">
+				<h3>IBM</h3>
+				<img src="/images/ibm.jpg" style="width:200px" alt="">
+				<p>Computadores, notebooks, servidores, software com <br><b>desconto de ..%</b></p>
 				<p><button class="btn btn-primary">Retirar	</button></p>
 			</div>
 
-			<div class="col-sm-3">
-				<h3>Empresa 1</h3>
-				<p>Descrição dos descontos e da empresa</p>
-				<p><button class="btn btn-primary">Retirar	</button></p>
-			</div>
 		</div>
 	</div>
 </template>
