--- a/client/views/listOngs/listOngs.html
+++ b/client/views/listOngs/listOngs.html
@@ -6,27 +6,33 @@
 			<h2><small>Explore novas formas de mudar o mundo</small></h2>
 		</div>
 		<div class="col-sm-4 ong">
-			<img src="/images/greenpeace.jpg" alt="{{nome}}" class="img-circle img-responsive">
-			<h2>Greenpeace</h2>
-			<p>
-				O Greenpeace é uma organização global cuja missão é proteger o meio ambiente, promover a paz e inspirar mudanças de atitudes que garantam um futuro mais verde e limpo para esta e para as futuras gerações.
-			</p>
+			<a href="#" class="thumbnail">
+				<img src="/images/greenpeace.jpg" alt="{{nome}}" class="img-circle img-responsive">
+				<h2>Greenpeace</h2>
+				<p>
+					O Greenpeace é uma organização global cuja missão é proteger o meio ambiente, promover a paz e inspirar mudanças de atitudes que garantam um futuro mais verde e limpo para esta e para as futuras gerações.
+				</p>
+			</a>
 		</div>
 
 		<div class="col-sm-4 ong">
-			<img src="/images/greenpeace.jpg" alt="{{nome}}" class="img-circle img-responsive">
-			<h2>Greenpeace</h2>
-			<p>
-				O Greenpeace é uma organização global cuja missão é proteger o meio ambiente, promover a paz e inspirar mudanças de atitudes que garantam um futuro mais verde e limpo para esta e para as futuras gerações.
-			</p>
+			<a href="#" class="thumbnail">
+				<img src="/images/greenpeace.jpg" alt="{{nome}}" class="img-circle img-responsive">
+				<h2>Greenpeace</h2>
+				<p>
+					O Greenpeace é uma organização global cuja missão é proteger o meio ambiente, promover a paz e inspirar mudanças de atitudes que garantam um futuro mais verde e limpo para esta e para as futuras gerações.
+				</p>
+			</a>
 		</div>
 
 		<div class="col-sm-4 ong">
-			<img src="/images/greenpeace.jpg" alt="{{nome}}" class="img-circle img-responsive">
-			<h2>Greenpeace</h2>
-			<p>
-				O Greenpeace é uma organização global cuja missão é proteger o meio ambiente, promover a paz e inspirar mudanças de atitudes que garantam um futuro mais verde e limpo para esta e para as futuras gerações.
-			</p>
+			<a href="#" class="thumbnail">
+				<img src="/images/greenpeace.jpg" alt="{{nome}}" class="img-circle img-responsive">
+				<h2>Greenpeace</h2>
+				<p>
+					O Greenpeace é uma organização global cuja missão é proteger o meio ambiente, promover a paz e inspirar mudanças de atitudes que garantam um futuro mais verde e limpo para esta e para as futuras gerações.
+				</p>
+			</a>
 		</div>
 	</div>
 </div>
