--- a/client/views/main/main.html
+++ b/client/views/main/main.html
@@ -63,13 +63,14 @@
 		  				</div>
 					</h4>
 					<div class="list-group-item-text">
-						<div class="row">
+						<div class="row text-center">
 							<div class="col-sm-11 col-sm-offset-1">
 								<h3>{{title}}</h3>
 							</div>
-							<div class="col-sm-10 col-sm-offset-1  text-center">
+							<div class="col-sm-10 col-sm-offset-1  text-left">
 								{{description}}
 							</div>
+							<button class="btn btn-primary">Ser Gente Boa!</button>
 						</div>
 					</div>
 				</div>
