--- a/client/views/main/main.html
+++ b/client/views/main/main.html
@@ -43,17 +43,68 @@
   		</div>
 	   </div>
     {{/each}}
-	<div class="col-sm-9 timeline">
-		<div class="container">
-			<div class="row list-group list-unstyled events-list">
-      {{#each events}}
-				{{>insideMain}}
-      {{/each}}
-			</div>
-		</div>
-		<div class='col-sm-2 rewards'>
+	<div class="col-sm-10 timeline margin-nav">
+		<ul class="cbp_tmtimeline">
+	    <li>
+	        <time class="cbp_tmtime" datetime="2013-04-10 18:30"><span>4/10/13</span> <span>18:30</span></time>
+	        <div class="cbp_tmicon">	<img src="images/ong.png" alt="{{nome}}" class="img-responsive img-circle"></div>
+	        <div class="cbp_tmlabel">
+	            <h3>Greenpeace <small>criou um evento</small>
+	            <br>
+	            </h3>
+	            <h2>
+	            	Ajuda aos camarões do mar
+	            </h2>
+	            <p>
+	            	Onde:
+	            </p>
+	            <p>
+	            	Data de publicação:
+	            </p>
+	        </div>
+	    </li>
+    </ul>
+    <ul class="cbp_tmtimeline">
+	    <li>
+	        <time class="cbp_tmtime" datetime="2013-04-10 18:30"><span>4/10/13</span> <span>18:30</span></time>
+	        <div class="cbp_tmicon">	<img src="images/ong.png" alt="{{nome}}" class="img-responsive img-circle"></div>
+	        <div class="cbp_tmlabel">
+	            <h3>Greenpeace <small>criou um evento</small>
+	            <br>
+	            </h3>
+	            <h2>
+	            	Ajuda aos camarões do mar
+	            </h2>
+	            <p>
+	            	Onde:
+	            </p>
+	            <p>
+	            	Data de publicação:
+	            </p>
+	        </div>
+	    </li>
+    </ul>
+    <ul class="cbp_tmtimeline">
+	    <li>
+	        <time class="cbp_tmtime" datetime="2013-04-10 18:30"><span>4/10/13</span> <span>18:30</span></time>
+	        <div class="cbp_tmicon">	<img src="images/ong.png" alt="{{nome}}" class="img-responsive img-circle"></div>
+	        <div class="cbp_tmlabel">
+	            <h3>Greenpeace <small>criou um evento</small>
+	            <br>
+	            </h3>
+	            <h2>
+	            	Ajuda aos camarões do mar
+	            </h2>
+	            <p>
+	            	Onde:
+	            </p>
+	            <p>
+	            	Data de publicação:
+	            </p>
+	        </div>
+	    </li>
+    </ul>
 
-		</div>
 	</div>
   </section>
 </template>
