--- a/client/css/css2.css
+++ b/client/css/css2.css
@@ -1047,3 +1047,20 @@ a.thumbnail{
 	padding-top:3px;
 	padding-bottom:3px;
 }
+
+/*.login-password-form {
+  display:none;
+}
+
+.or {
+  display:none;
+}
+
+#login-sign-in-link {
+  display:none;
+}
+.login-close-text {
+  display:none;
+}
+
+*/
