--- a/client/views/accessOng/accessOng.html
+++ b/client/views/accessOng/accessOng.html
@@ -7,7 +7,7 @@
       <div class="row">
         <div class="col-sm-12">
           <h1>Acessar Ong Admin</h1>
-          <!-- <form class="form-inline intro" id="formSignIn">
+          <form class="form-inline intro" id="formSignIn">
             <div class="form-group">
               <input type="email" class="input2 form-control" name="email" id="email" autocomplete="off" placeholder="E-mail">
             </div>
@@ -18,13 +18,12 @@
               <button type="submit" class="btn">Acessar</button>
             </div>
           </form>
-          <a href="" class="goCadastro">Cadastrar uma ONG</a> -->
-          {{>loginButtons}}
+          <a href="" class="goCadastro">Cadastrar uma ONG</a>
         </div>
       </div>
     </div>
 
-    <!-- <div id="cadastro" class="container hidden">
+    <div id="cadastro" class="container hidden">
       <div class="row">
         <div class="col-sm-12">
           <h1>Cadastrar ONG</h1>
@@ -42,7 +41,7 @@
           <a href="" class="goAcesso">Cancelar cadastro</a>
         </div>
       </div>
-    </div> -->
+    </div>
   </section>
 
 
