--- a/client/views/index/index.html
+++ b/client/views/index/index.html
@@ -5,7 +5,7 @@
       <div class="row caption">
         <div class="col-sm-12 text-center">
           <h1 class="text-center">Quem faz a diferença merece recompensa</h1>
-          {{> loginButtons}}
+          <p class="loginFace login-button">Comece agora!</p>
         </div>
       </div>
     </div>
