--- a/client/views/ong/ong.html
+++ b/client/views/ong/ong.html
@@ -23,7 +23,7 @@
 					<h4 class="list-group-item-heading">
 						<div class="row">
 		  					<span class="col-sm-1 foto">
-		  						<img src="images/{{linkong}}.png" alt="{{nome}}" class="img-circle img-responsive">
+		  						<img src="images/{{linkong}}" alt="{{nome}}" class="img-circle img-responsive">
 		  					</span>
 		  					<span class="col-sm-11 text-left nome">
 		  						Greenpeace
