--- a/client/views/index/index.html
+++ b/client/views/index/index.html
@@ -53,7 +53,7 @@
           {{#each eventsLanding}}
           <div class="col-sm-4">
             <i class="features features-instant"></i>
-            <img src="images/{{linkong}}.png" alt="">
+            <img src="images/{{linkong}}" alt="">
             <h4>{{title}}</h4>
             <p>{{sub description}}</p>
           </div>
