--- a/client/views/index/index.html
+++ b/client/views/index/index.html
@@ -52,8 +52,13 @@
           <!-- each pelos eventos -->
           {{#each eventsLanding}}
           <div class="col-sm-4">
+
             <i class="features features-instant"></i>
-            <img src="images/{{linkong}}" alt="">
+            <div class="row">
+            	<div class="col-sm-6 col-sm-offset-3">
+            		<img src="images/{{linkong}}" alt="" class="img-responsive " style="float:center;">
+            	</div>
+            </div>
             <h4>{{title}}</h4>
             <p>{{sub description}}</p>
           </div>
