--- a/client/views/main/main.html
+++ b/client/views/main/main.html
@@ -60,7 +60,7 @@
 	            	Local: {{local}}
 	            </p>
 	            <p>
-	            	Data: {{date}}
+	            	Data: {{createDate}}
 	            </p>
 	            <p>
                 {{#if number value='1'}}
