--- a/client/views/index/index.html
+++ b/client/views/index/index.html
@@ -11,33 +11,13 @@
     </div>
   </header>
   <a name="how"></a>
-  <section class="how section-white">
+  <section class="how section-green">
     <div class="container">
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
           <!-- <h2>How it works</h2> -->
           <h2>Como o clube do bem funciona?</h2>
-          <h3>Somos....</h3>
-          <h3>
-        </h3></div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4 text-center">
-          <i class="features features-instant"></i>
-          <h4>Voluntário</h4>
-          <p>bla bla</p>
-        </div>
-
-        <div class="col-sm-4 text-center">
-          <i class="features features-instant"></i>
-          <h4>ONG</h4>
-          <p>bla bla</p>
-        </div>
-
-        <div class="col-sm-4 text-center">
-          <i class="features features-instant"></i>
-          <h4>Empresas</h4>
-          <p>bla bla</p>
+          <img class="img-responsive" src="/images/comoFunciona.png">
         </div>
       </div>
     </div>
