--- a/client/views/listOngs/listOngs.html
+++ b/client/views/listOngs/listOngs.html
@@ -6,7 +6,7 @@
 			<h2><small>Explore novas formas de mudar o mundo</small></h2>
 		</div>
 		<div class="col-sm-4 ong">
-			<a href="#" class="thumbnail">
+			<a href="{{pathFor 'ong'}}" class="thumbnail">
 				<img src="/images/greenpeace.jpg" alt="{{nome}}" class="img-circle img-responsive">
 				<h2>Greenpeace</h2>
 				<p>
@@ -16,7 +16,7 @@
 		</div>
 
 		<div class="col-sm-4 ong">
-			<a href="#" class="thumbnail">
+			<a href="{{pathFor 'ong'}}" class="thumbnail">
 				<img src="/images/greenpeace.jpg" alt="{{nome}}" class="img-circle img-responsive">
 				<h2>Greenpeace</h2>
 				<p>
@@ -26,7 +26,7 @@
 		</div>
 
 		<div class="col-sm-4 ong">
-			<a href="#" class="thumbnail">
+			<a href="{{pathFor 'ong'}}" class="thumbnail">
 				<img src="/images/greenpeace.jpg" alt="{{nome}}" class="img-circle img-responsive">
 				<h2>Greenpeace</h2>
 				<p>
