--- a/client/views/recompensas/recompensas.html
+++ b/client/views/recompensas/recompensas.html
@@ -9,7 +9,7 @@
 				<h3>Magazine Luiza</h3>
 				<img src="/images/magazineluiza.jpg" style="width:200px" alt="">
 				<p>As melhores ofertas em móveis, eletrônicos, eletrodomésticos, informática e muito mais, você encontra no site do Magazine Luiza! <br> <b>Desconto de ..%</b></p>
-				<p><button class="btn btn-primary">Retirar	</button></p>
+				<p><button class="btn btn-primary magazine">Retirar	</button></p>
 			</div>
 
 			<div class="col-sm-4">
