--- a/client/views/main/main.html
+++ b/client/views/main/main.html
@@ -1,20 +1,4 @@
 <template name="main">
-  <section class="partners" style="display: none;">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-          <ul class="list-inline text-center partners">
-            <li>Our partners include</li>
-            <li><a href="#"><i class="partners partners-etsy"><span>Etsy</span></i></a></li>
-            <li><a href="#"><i class="partners partners-opensky"><span>Open Sky</span></i></a></li>
-            <li><a href="#"><i class="partners partners-storenvy"><span>Store Envy</span></i></a></li>
-            <li><a href="#"><i class="partners partners-udemy"><span>Udemy</span></i></a></li>
-            <li><a href="#events">Add your events</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <section class="profile">
     {{#each user}}
@@ -44,6 +28,7 @@
 	   </div>
     {{/each}}
 	<div class="col-sm-10 col-sm-offset-2 timeline margin-nav">
+    <a class="goman">Ser Gente Boa!</a>
     {{#each events}}
 		<ul class="cbp_tmtimeline">
 	    <li>
@@ -63,48 +48,15 @@
 	            	{{date}}
 	            </p>
 	            <p>
-                {{#if number value='1'}}
-                <button class="btn btn-primary">Yeah sou gente boa!!</button>
-                {{else}}
-                <button class="btn btn-primary">Ser Gente Boa!</button>
-                {{/if}}
-
+              {{>vaiGente}}
 	            </p>
 	        </div>
 	    </li>
-
     </ul>
     {{/each}}
 	</div>
   </section>
 </template>
-
-
-<template name="insideMain">
-  <div class="col-sm-12 list-group-item timeline-event">
-    <h4 class="list-group-item-heading">
-      <div class="row">
-          <span class="col-sm-1 foto">
-            <img src="images/{{linkong}}.png" alt="{{nome}}" class="img-circle img-responsive">
-          </span>
-          <span class="col-sm-11 text-left nome">
-            {{ong}}
-            <br>
-            <small>
-              Adicionou {{type}} {{fromNow createDate}}
-            </small>
-          </span>
-        </div>
-    </h4>
-    <div class="list-group-item-text">
-      <div class="row">
-        <div class="col-sm-11 col-sm-offset-1">
-          <h3>{{title}}</h3>
-        </div>
-        <div class="col-sm-10 col-sm-offset-1  text-center">
-          {{description}}
-        </div>
-      </div>
-    </div>
-  </div>
+<template name="vaiGente">
+<button class="btn btn-primary" id="vaiGente">Seja gente boa</button>
 </template>
