--- a/client/views/index/index.html
+++ b/client/views/index/index.html
@@ -16,7 +16,7 @@
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
           <!-- <h2>How it works</h2> -->
-          <h2>Como o clube do bem funciona?</h2>
+          <h2 class="text-center">Descubra como ser<br>Gente Boa!</h2>
           <img class="img-responsive" src="/images/comoFunciona.png">
         </div>
       </div>
