--- a/client/views/ong/ong.html
+++ b/client/views/ong/ong.html
@@ -16,9 +16,10 @@
   			</div>
   		</div>
 	</div>
-	<div class="col-sm-10 timeline">
+	<div class="col-sm-10 col-sm-offset-2 timeline">
 		<div class="container">
 			<div class="row list-group list-unstyled events-list">
+			{{#each listEvents}}
 				<div class="col-sm-12 list-group-item timeline-event">
 					<h4 class="list-group-item-heading">
 						<div class="row">
@@ -46,7 +47,9 @@
 						</div>
 					</div>
 				</div>
+				{{/each}}
 			</div>
+			
 		</div>
 	</div>
   </section>
