--- a/client/views/index/index.html
+++ b/client/views/index/index.html
@@ -4,8 +4,8 @@
     <div class="welcome">
       <div class="row caption">
         <div class="col-sm-12 text-center">
-          <h1 class="text-center">Quem faz a diferença merece recompensa</h1>
-          <p class="loginFace login-button">Comece agora!</p>
+          <h1 class="text-center">Ser <strong>Gente Boa</strong> recompensa!</h1>
+          <p class="loginFace login-button">Comece agora</p>
         </div>
       </div>
     </div>
