--- a/client/views/recompensas/recompensas.html
+++ b/client/views/recompensas/recompensas.html
@@ -4,6 +4,7 @@
 		  <h1>Recompensas para quem merece</h1>
 		  <p>Retire aqui seu voucher de desconto para produtos das empresas do bem</p>
 		</div>
+		<h1 class="creditos-do-bem"><small>Seus créditos do bem:</small>{{number}}</h1>
 		<div class="row">
 			<div class="col-sm-4">
 				<h3>Magazine Luiza</h3>
