--- a/client/views/accessOng/accessOng.html
+++ b/client/views/accessOng/accessOng.html
@@ -29,10 +29,10 @@
           <h1>Cadastrar ONG</h1>
           <form class="form-inline intro" id="formSignUp">
             <div class="form-group">
-              <input type="emailSignUp" class="input2 form-control" name="emailSignUp" id="emailSignUp" autocomplete="off" placeholder="E-mail">
+              <input type="email" class="input2 form-control" name="emailSignUp" id="emailSignUp" autocomplete="off" placeholder="E-mail">
             </div>
             <div class="form-group">
-              <input type="passwordSignUp" class="input2 form-control" name="password" id="passwordSignUp" autocomplete="off" placeholder="Senha">
+              <input type="password" class="input2 form-control" name="password" id="passwordSignUp" autocomplete="off" placeholder="Senha">
             </div>
             <div class="form-group">
               <button type="submit" class="btn">Cadastrar</button>
