--- a/client/views/index/index.html
+++ b/client/views/index/index.html
@@ -4,6 +4,7 @@
     <div class="welcome">
       <div class="row caption">
         <div class="col-sm-12 text-center">
+          <img src="/gente-boa.png" alt="">
           <h1 class="text-center">Ser <strong>Gente Boa</strong> recompensa!</h1>
           <p class="loginFace login-button">Comece agora</p>
         </div>
