--- a/client/css/css2.css
+++ b/client/css/css2.css
@@ -50,7 +50,7 @@ h1, h2, h3{
   margin-bottom: 0px;
   width:100%;
   text-transform: uppercase;
-  position:absolute;
+  /*position:absolute; ALGUMA OBJECAO POR TIRAR O ABSOLUTE?*/
   box-shadow:0px 3px 5px rgba(0,0,0, 0.5);
 }
 
